# pica-rs

./: .deny.toml  .gitignore  .nojekyll  .rustfmt.toml  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  filter.html  index.html  install.html  search-index.js  search.json  settings.html  source-files.js  test.sh
R/: .RData  (+3 more)
crates/pica-cli/: Cargo.toml
crates/pica-cli/src/: cli.rs  config.rs  error.rs  main.rs  prelude.rs  translit.rs  utils.rs
crates/pica-cli/src/commands/: completions.rs  concat.rs  config.rs  count.rs  describe.rs  explode.rs  filter.rs  frequency.rs  hash.rs  invalid.rs  mod.rs  partition.rs  print.rs  sample.rs  select.rs  slice.rs  split.rs
crates/pica-cli/tests/: integration.rs
crates/pica-cli/tests/check/: allow.rs  datetime.rs  duplicates.rs  filter.rs  isni.rs  iso639.rs  jel.rs  jelc.rs  link.rs  mod.rs  unicode.rs
crates/pica-format/: Cargo.toml
crates/pica-format/fuzz/: Cargo.toml
crates/pica-format/src/: lib.rs  parse.rs
crates/pica-format/tests/: integration.rs
crates/pica-lint/: Cargo.toml
crates/pica-lint/contrib/: AEN.toml  GND.toml
crates/pica-lint/src/: cli.rs  main.rs  progress.rs  util.rs
crates/pica-matcher/: Cargo.toml
crates/pica-matcher/fuzz/: Cargo.toml
crates/pica-matcher/src/: common.rs  field_matcher.rs  lib.rs  matcher_builder.rs  occurrence_matcher.rs  options.rs  record_matcher.rs  subfield_matcher.rs  tag_matcher.rs
crates/pica-matcher/tests/: field_matcher.rs  integration.rs  occurrence_matcher.rs  record_matcher.rs  subfield_matcher.rs  tag_matcher.rs
crates/pica-path/: Cargo.toml
crates/pica-path/fuzz/: Cargo.toml
crates/pica-path/src/: lib.rs
crates/pica-path/tests/: integration.rs  path.rs
crates/pica-record/: Cargo.toml
crates/pica-record-v1/: Cargo.toml
crates/pica-record-v1/benches/: main.rs
crates/pica-record-v1/fuzz/: Cargo.toml
crates/pica-record-v1/src/: error.rs  occurrence.rs  record.rs  tag.rs
crates/pica-record/benches/: main.rs
crates/pica-record/fuzz/: Cargo.toml
crates/pica-record/src/: field.rs  level.rs  lib.rs  occurrence.rs  record.rs  subfield.rs  tag.rs
crates/pica-record/tests/: field.rs  integration_tests.rs  lib.rs  occurrence.rs  subfield.rs  tag.rs
crates/pica-select/: Cargo.toml
crates/pica-select/fuzz/: Cargo.toml
crates/pica-select/src/: lib.rs
crates/pica-select/tests/: integration.rs
crates/pica-toolkit/: Cargo.toml
crates/pica-toolkit/src/: cli.rs  common.rs  config.rs  error.rs  filter_list.rs  main.rs  progress.rs  util.rs
crates/pica-toolkit/tests/: snapshot.rs
crates/pica-utils/: Cargo.toml  README.md
crates/pica-utils/src/: filter_list.rs  lib.rs  translit.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_byte_record.rs  fuzz_filter.rs  fuzz_format.rs  fuzz_path.rs  fuzz_query.rs  fuzz_record_matcher.rs  fuzz_record_ref.rs  fuzz_selectors.rs
pica-cli/: Cargo.toml
pica-cli/src/: cli.rs  config.rs  error.rs  main.rs  prelude.rs  progress.rs  unicode.rs  utils.rs
pica-cli/src/commands/: completions.rs  concat.rs  config.rs  count.rs  explode.rs  hash.rs  invalid.rs  mod.rs  partition.rs  sample.rs  slice.rs  split.rs
pica-cli/tests/: integration.rs
pica-cli/tests/concat/: mod.rs
pica-cli/tests/config/: mod.rs
pica-cli/tests/count/: mod.rs
pica-cli/tests/filter/: exists.rs  mod.rs  relation.rs
pica-cli/tests/hash/: mod.rs
pica-cli/tests/invalid/: mod.rs
pica-cli/tests/partition/: mod.rs
pica-cli/tests/prelude/: mod.rs
pica-cli/tests/print/: mod.rs
pica-cli/tests/sample/: mod.rs
pica-cli/tests/select/: mod.rs
pica-core/: CHANGELOG.md  Cargo.toml
pica-core/benches/: field.rs  occurrence.rs  subfield.rs  tag.rs
pica-core/src/: error.rs  field.rs  lib.rs  occurrence.rs  subfield.rs  tag.rs  types.rs
pica-lint/: Cargo.toml
pica-lint/contrib/: AEN.toml  AEN_Webf.toml  AEN_mSW.toml  DNB.toml  FE.toml  GND.toml  ME_Mono.toml  ME_VerIF.toml
pica-lint/src/: main.rs  progress.rs  rules.rs  stats.rs
pica-lint/src/formatter/: csv.rs  mod.rs
pica-lint/src/lints/: checksum.rs  date.rs  filter.rs  iri.rs  iso639.rs  mod.rs  orcid.rs  refcheck.rs  unicode.rs
pica-lint/src/rules/: level.rs  rule.rs  set.rs
pica-matcher/: CHANGELOG.md  Cargo.toml
pica-matcher/src/: common.rs  error.rs  field_matcher.rs  flags.rs  lib.rs  occurrence_matcher.rs  ops.rs  record_matcher.rs  subfield_list_matcher.rs  subfield_matcher.rs  tag_matcher.rs
pica-matcher/tests/: field_matcher.rs  record_matcher.rs  subfield_matcher.rs
pica-path/: CHANGELOG.md  Cargo.toml
pica-path/src/: lib.rs
pica-path/tests/: path.rs
pica-record/: CHANGELOG.md  Cargo.toml  foo.txt
pica-record/benches/: main.rs  subfield.rs  tag.rs
pica-record/fuzz/: Cargo.toml
pica-record/fuzz/fuzz_targets/: fuzz_field_ref.rs  fuzz_occurrence_ref.rs  fuzz_record_ref.rs  fuzz_subfield_ref.rs  fuzz_tag_ref.rs
pica-record/src/: arbitrary.rs  borrowed.rs  error.rs  field.rs  io.rs  level.rs  lib.rs  occurrence.rs  parse.rs  record.rs  subfield.rs  tag.rs
pica-record/src/io/: mod.rs  reader.rs  writer.rs
pica-record/src/primitives/: code.rs  field.rs  mod.rs  parse.rs  subfield.rs  value.rs
pica-record/tests/: integration_tests.rs
pica-record/tests/level/: mod.rs
pica-record/tests/reader/: mod.rs
pica-record/tests/subfield/: mod.rs
pica-record/tests/writer/: mod.rs
pica-select/: Cargo.toml
pica-select/fuzz/fuzz_targets/: fuzz_query.rs
pica-select/src/: lib.rs
pica-toolkit/: Cargo.toml
pica-toolkit/src/: cli.rs  common.rs  config.rs  main.rs  progress.rs  util.rs
pica-toolkit/src/cmds/: cat.rs  count.rs  filter.rs  frequency.rs  invalid.rs  json.rs  partition.rs  print.rs  sample.rs  select.rs  slice.rs  split.rs  xml.rs
pica-toolkit/src/commands/: cat.rs  count.rs  explode.rs  filter.rs  frequency.rs  hash.rs  invalid.rs  mod.rs  partition.rs  print.rs  sample.rs  select.rs  slice.rs
pica-toolkit/tests/: cli_tests.rs  snapshot.rs
pica-toolkit/tests/data/: 004732650-nfd.json  deny_list.csv  dump.json  dump.txt  dump_cnt.csv  dump_cnt.tsv  two-records.xml  tworecs.json
(+3434 files in other folders)
