[package]
name = "pica-record"
version = "0.1.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
license = "EUPL-1.2"
keywords = ["PICA+", "code4lib"]
edition = "2021"
rust-version = "1.83"

[dependencies]
bstr = { version = "1.11" }
flate2 = { version = "1.0.34" }
regex = { version = "1.10" }
serde = { version = "1.0", optional = true, features = ["derive"] }
sha2 = { version = "0.10" }
smallvec = { version = "1.13.2" }
strsim = { version = "0.11.1" }
thiserror = { version = "2.0" }
winnow = { version = "0.6.18" }

[features]
serde = ["dep:serde", "bstr/serde"]
unstable = []
compat = []

[dev-dependencies]
anyhow = { version = "1.0" }
pica-record = { path = "./", features = ["serde"] }
quickcheck = { version = "1.0" }
quickcheck_macros = { version = "1.0" }
serde_test = { version = "1" }
tempfile = { version = "3.14.0" }

[[test]]
path = "tests/lib.rs"
name = "integration"

[workspace]
default-members = ["crates/pica-cli"]
resolver = "2"

members = ["crates/pica-cli"]

[workspace.package]
version = "0.25.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
license = "EUPL-1.2"
readme = "./README.md"
keywords = ["PICA+", "code4lib"]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
pica-matcher = { version = "0.25", path = "./crates/pica-matcher" }
pica-path = { version = "0.25", path = "./crates/pica-path" }
pica-record-v1 = { version = "0.25", path = "./crates/pica-record-v1" }
pica-record = { version = "0.1", path = "." }

anyhow = "1.0"
bstr = "1.10"
chrono = { version = "0.4", default-features = false }
clap = "4.5"
csv = "1.3"
flate2 = "1.0"
polars = { version = "0.45", features = ["ipc", "decompress", "performant"] }
quickcheck = "1.0"
rand = "0.8"
regex = "1.10"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
strsim = "0.11"
thiserror = { version = "2.0" }
toml = "0.8"
winnow = "0.6"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.dev]
debug = 0
