[workspace]
default-members = ["crates/pica-cli"]
members = ["crates/pica-cli"]
resolver = "2"

[workspace.package]
version = "1.1.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
license = "EUPL-1.2"
keywords = ["PICA+", "code4lib"]
rust-version = "1.85"
edition = "2024"

[package]
name = "pica-record"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
compat = []
nightly = ["smallvec/specialization"]
performant = []
serde = ["dep:serde", "bstr/serde"]
unstable = []

[dependencies]
bstr = { version = "1.11" }
flate2 = { version = "1.0" }
regex = { version = "1.11" }
serde = { version = "1.0", optional = true, features = ["derive"] }
sha2 = { version = "0.10" }
smallvec = { version = "1.14" }
strsim = { version = "0.11" }
thiserror = { version = "2.0" }
winnow = { version = "0.7" }

[dev-dependencies]
anyhow = { version = "1.0" }
pica-record = { path = "./", features = ["serde"] }
quickcheck = { version = "1.0" }
quickcheck_macros = { version = "1.0" }
serde_test = { version = "1.0" }
tempfile = { version = "3.19" }

[lib]
path = "src/lib.rs"

[[test]]
path = "tests/lib.rs"
name = "integration"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true

[profile.dev]
debug = 0
