[package]
name = "pica-record-ref"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
pica-record = { path = "..", features = ["unstable"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "fuzz-record-ref"
path = "fuzz_targets/fuzz_record_ref.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-record-matcher"
path = "fuzz_targets/fuzz_record_matcher.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-format"
path = "fuzz_targets/fuzz_format.rs"
test = false
doc = false
bench = false
