[package]
name = "pica-record-ref"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
pica-record = { path = "..", features = ["unstable", "compat"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "fuzz-record-ref"
path = "fuzz_targets/fuzz_record_ref.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-record-matcher"
path = "fuzz_targets/fuzz_record_matcher.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-format"
path = "fuzz_targets/fuzz_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-path"
path = "fuzz_targets/fuzz_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-query"
path = "fuzz_targets/fuzz_query.rs"
test = false
doc = false
bench = false
