[package]
name = "pica-cli"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bstr = { workspace = true }
clap = { version = "4.5.21", features = ["derive", "cargo", "wrap_help"] }
clap_complete = { version = "4.5.38" }
csv = { version = "1.3.1" }
directories = { version = "5.0.1" }
flate2 = { workspace = true }
hashbrown = { version = "0.15" }
indicatif = { version = "0.17.9", features = ["improved_unicode"] }
pica-record = { workspace = true, features = ["serde"] }
polars = { version = "0.45", features = ["ipc", "decompress", "lazy"] }
rand = { version = "0.8.5" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { version = "0.8.19", features = ["preserve_order"] }

[dev-dependencies]
anyhow = { version = "1.0.93" }
assert_cmd = { version = "2.0.16" }
assert_fs = { version = "1.1.2" }
predicates = { version = "3.1.2" }

[[bin]]
path = "src/main.rs"
name = "pica"

[[test]]
path = "tests/integration.rs"
name = "integration"

[features]
unstable = ["pica-record/unstable"]
compat = ["pica-record/compat"]
