[package]
name = "pica-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = "0.2"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
nom-test-helpers = "6.0"
tempfile = "3.2"

[[bench]]
name = "tag"
harness = false

[[bench]]
name = "occurrence"
harness = false

[[bench]]
name = "subfield"
harness = false

[[bench]]
name = "field"
harness = false
