[package]
name = "pica-lint"
version = "0.1.0"
edition = "2021"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
license = "MIT OR Unlicense"

[dependencies]
anyhow = "1.0"
bstr = "1.0"
clap = { version = "4.0", features = ["cargo", "derive", "wrap_help"] }
chrono = "0.4"
csv = "1.1"
flate2 = "1.0"
indicatif = "0.17"
once_cell = "1.16"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sophia = "0.7"
toml = "0.5"

pica-matcher = { version = "0.1", path = "../pica-matcher", features = ["serde"] }
pica-path = { version = "0.1", path = "../pica-path", features = ["serde"] }
pica-record = { version = "0.1", path = "../pica-record" }
