[package]
name = "pica-matcher"
version = "0.1.0"
license = "MIT OR Unlicense"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
include = ["src/**/*"]
edition = "2021"

[dependencies]
bstr = "1.0"
nom = "7.1"
thiserror = "1.0"

pica-record = { version = "0.1", path = "../pica-record" }

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.4", features = ["html_reports"] }
nom-test-helpers = "6.1"
