[package]
name = "pica-matcher"
version = "0.1.0"
license = "MIT OR Unlicense"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
include = ["src/**/*"]
edition = "2021"

[dependencies]
bstr = "1.5"
nom = "7.1"
regex = "1.8"
strsim = "0.10"
thiserror = "1.0"
serde = { version = "1.0", optional = true }

pica-record = { version = "0.1", path = "../pica-record" }

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
nom-test-helpers = "6.1"
once_cell = "1.17"

[features]
serde = ["dep:serde"]
