[package]
name = "pica-path"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
bstr = { workspace = true }
nom = { workspace = true }
pica-matcher = { workspace = true }
pica-record = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
nom-test-helpers = "6.1"

[features]
serde = ["dep:serde"]
