[package]
name = "pica-record"
version = "0.1.0"
license = "MIT OR Unlicense"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
include = ["src/**/*"]
edition = "2021"

[dependencies]
bstr = "1.5"
flate2 = "1.0"
nom = "7.1"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
nom-test-helpers = "6.1"

[[bench]]
name = "main"
harness = false
