[package]
name = "pica-toolkit"
version = "0.12.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
edition = "2021"
license = "MIT OR Unlicense"

[dependencies]
atty = "0.2"
bstr = "0.2"
clap = { version = "3.1", features = ["cargo"] }
clap_complete = "3.1"
csv = "1.1"
directories = "4.0"
flate2 = "1.0"
lazy_static = "1.4"
rand = "0.8"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# strsim = "0.10"
termcolor = "1.1"
toml = "0.5"
unicode-normalization = "0.1"
xml-rs = "0.8"

pica-core = { path = "../pica-core" }
pica = { path = "../" }

[dev-dependencies]
trycmd = "0.13"

[[bin]]
path = "src/main.rs"
name = "pica"
