[package]
name = "pica-cli"
version = "0.25.0"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
license = "EUPL-1.2"
keywords = ["PICA+", "code4lib"]
rust-version = "1.83"
edition = "2021"

[features]
compat = ["pica-record/compat"]
unstable = ["pica-record/unstable"]
# nightly = ["polars/simd"]
performant = [
    "polars/cse",
    "polars/performant",
]

[dependencies]
bstr = { version = "1.11" }
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
clap_complete = { version = "4.5" }
csv = { version = "1.3" }
directories = { version = "6.0" }
flate2 = { version = "1.0" }
hashbrown = { version = "0.15" }
indicatif = { version = "0.17", features = ["improved_unicode"] }
pica-record = { path = "../../", features = ["serde"] }
polars = { version = "0.46", features = ["ipc", "decompress", "lazy"] }
quick-xml = { version = "0.37" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
toml = { version = "0.8", features = ["preserve_order"] }
unicode-normalization = { version = "0.1" }

[dev-dependencies]
anyhow = { version = "1.0" }
assert_cmd = { version = "2.0" }
assert_fs = { version = "1.1" }
predicates = { version = "3.1" }

[[bin]]
path = "src/main.rs"
name = "pica"

[[test]]
path = "tests/integration.rs"
name = "integration"
