[package]
name = "pica-cli"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["performant"]
compat = ["pica-record/compat"]
nightly = ["pica-record/nightly", "polars/nightly", "hashbrown/nightly"]
performant = ["pica-record/performant", "polars/cse", "polars/performant"]
unstable = ["pica-record/unstable"]

[dependencies]
bstr = { version = "1.12" }
clap_complete = { version = "4.5" }
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
csv = { version = "1.3" }
directories = { version = "6.0" }
flate2 = { version = "1.1" }
hashbrown = { version = "0.15" }
indicatif = { version = "0.18", features = ["improved_unicode"] }
jiff = { version = "0.2" }
pica-record = { path = "../../", features = ["serde"] }
polars = { version = "0.49", features = ["ipc", "decompress", "lazy", "fmt"] }
quick-xml = { version = "0.38" }
rand = { version = "0.9" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
tmp_env = { version = "0.1" }
toml = { version = "0.8", features = ["preserve_order"] }
unicode-normalization = { version = "0.1" }

[dev-dependencies]
anyhow = { version = "1.0" }
assert_cmd = { version = "2.0" }
assert_fs = { version = "1.1" }
predicates = { version = "3.1" }

[[bin]]
path = "src/main.rs"
name = "pica"

[[test]]
path = "tests/integration.rs"
name = "integration"
