[package]
name = "pica-format"
version= "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bstr = { workspace = true }
pica-matcher = { workspace = true }
pica-record-v1 = { workspace = true }
thiserror = { workspace = true }
winnow = { workspace = true, features = ["simd"] }

[dev-dependencies]
anyhow = "1.0"
