[package]
name = "pica-lint"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
bstr = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["cargo", "derive", "wrap_help"] }
csv = { workspace = true }
flate2 = { workspace = true }
indicatif = { version = "0.17" }
once_cell = { version = "1.19" }
pica-matcher = { workspace = true, features = ["serde"] }
pica-path = { workspace = true, features = ["serde"] }
pica-record-v1 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sophia = { version = "0.8" }
toml = { workspace = true }

