[package]
name = "pica-matcher"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
bstr = { workspace = true }
pica-record = { workspace = true }
pica-utils = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
strsim = "0.10"
thiserror = { workspace = true }
winnow = { workspace = true, features = ["simd"] }

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
serde = ["dep:serde"]
