[package]
name = "pica-path"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bstr = { workspace = true }
pica-matcher = { workspace = true }
pica-record-v1 = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
winnow = { workspace = true, features = ["simd"] }

[dev-dependencies]
anyhow = "1.0"

[features]
serde = ["dep:serde"]
