[package]
name = "pica-record"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
bstr = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
winnow = { workspace = true, features = ["simd"] }

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "main"
harness = false
