[package]
name = "pica-select"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
nom = { workspace = true }
pica-matcher = { workspace = true }
pica-path = { workspace = true }
pica-record = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bstr = { workspace = true }
nom-test-helpers = "6.1"
anyhow = { workspace = true }
