[package]
name = "pica-toolkit"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bstr = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "wrap_help"] }
csv = { workspace = true }
directories = { version = "5.0" }
flate2 = { workspace = true }
indicatif = { version = "0.17" }
pica-matcher = { workspace = true }
pica-path = { workspace = true }
pica-record-v1 = { workspace = true }
pica-utils = { workspace = true }
quick-xml = { version = "0.37" }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
unicode-normalization = { version = "0.1" }

[[bin]]
path = "src/main.rs"
name = "pica-v1"
