[package]
name = "pica-utils"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
bstr = { workspace = true }
polars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
unicode-normalization = { version =  "0.1.22" }
thiserror = { workspace = true }
