[package]
name = "pica-format-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.pica-format]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "fuzz-format"
path = "fuzz_targets/fuzz_format.rs"
test = false
doc = false
bench = false
